Slug input overflow fix, scrollable

--- a/assets/styles/components.scss
+++ b/assets/styles/components.scss
@@ -1254,7 +1254,7 @@ button {
     flex-shrink: 0;
   }
 
-  input {
+  input, textarea {
     border-radius: 0;
     background-color: transparent;
     box-shadow: unset;
